--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ html {
     font-family: 'Darker Grotesque', sans-serif;
     font-family: 'Lato', sans-serif;
     font-family: 'Rubik Dirt', cursive;
-    background-color: rgb(181, 210, 250);
+    background-image: url("../images/kantor.jpg");
+
 }
 
 .form {
@@ -46,7 +47,8 @@ html {
 .form__fieldset {
     border-radius: 10px;
     border: 1px solid rgb(106, 158, 236);
-    background-color: rgb(149, 189, 247);
+    background-color: #044ea1f5;
+
 
 }
 
@@ -65,7 +67,7 @@ html {
     padding: 10px;
     width: 307px;
     border: 1px solid rgb(46, 103, 189);
-    background-color: rgb(95, 149, 231);
+    background-color: rgb(4, 43, 150);
     color: white;
 }
 
@@ -76,5 +78,5 @@ html {
 }
 
 .form__button:hover {
-    background-color: rgb(67, 132, 216);
+    background-color: rgb(6, 82, 182);
 }
